# directvoice-audio

./: Cargo.toml
audio_codec/: Cargo.toml
audio_codec/examples/: audio_integration.rs
audio_codec/src/: lib.rs
audio_codec/tests/: audio_codec_tests.rs
audio_io/: Cargo.toml  README.md
audio_io/examples/: audio_session_loopback.rs  multi_playback.rs  single_capture.rs  single_playback.rs
audio_io/src/: capture.rs  lib.rs  mixer.rs  playback.rs  traits.rs
audio_io/src/Builder/: capture_builder.rs  mod.rs  playback_builder.rs
audio_io/src/session/: mod.rs  pipeline.rs
audio_io/src/stream/: build_input_stream.rs  build_output_stream.rs  mod.rs
audio_io/src/utils/: converter.rs  mod.rs  resampler.rs
audio_io/tests/: capture_tests.rs  device_config_test.rs  playback_tests.rs  session_track_tests.rs
